--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,11 +1,13 @@
+# .github/workflows/deploy.yml
 
+# Name of the workflow
+name: Deploy Jekyll site to GitHub Pages
 
-name: Build and Deploy Jekyll Site to GitHub Pages
-
+# Controls when the workflow will run
 on:
-  # Runs on pushes targeting the default branch
+  # Triggers the workflow on push events but only for the "main" branch
   push:
-    branches: ["main"] # Or "master", depending on your repo
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -27,23 +29,41 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout 🛎️
         uses: actions/checkout@v4
-      - name: Setup Ruby
+      
+      - name: Setup Node.js ⚙️
+        # Your repo has a package.json, so we need to install node dependencies
+        uses: actions/setup-node@v4
+        with:
+          node-version: "16"
+          cache: 'npm'
+
+      - name: Install JS dependencies 📦
+        run: npm install
+
+      - name: Setup Ruby 💎
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1' # Use the Ruby version specified in your Gemfile or a recent one
-          bundler-cache: true # Automatically runs `bundle install` and caches gems
+          # Check your Gemfile for the exact Ruby version
+          ruby-version: '3.1' 
+          bundler-cache: true # runs 'bundle install' and caches installed gems
 
-      - name: Build with Jekyll
-        # Sets the JEKYLL_ENV to production for GitHub Pages, then builds the site.
-        run: bundle exec jekyll build
+      - name: Setup Pages 📄
+        id: pages
+        uses: actions/configure-pages@v5
+
+      - name: Build with Jekyll 🔨
+        # Uses the build script from the Gemfile
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
 
-      - name: Upload artifact
-        # Automatically uploads the built site folder for deployment
+      - name: Upload artifact ⬆️
         uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload the '_site' directory
+          path: './_site'
 
   # Deployment job
   deploy:
@@ -53,6 +73,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages 🚀
         id: deployment
         uses: actions/deploy-pages@v4
