--- a/site/_data/social_links.yml
+++ b/site/_data/social_links.yml
@@ -3,6 +3,6 @@
 # Example of adding a new link to the footer - {icon: "ion-logo-facebook", link: "https://facebook.com"}
 # Other icons can be found at https://ionicons.com/v4/
 social:
-- {icon: "Instagram", link: "https://www.instagram.com/iysaksystem/"}
+- {icon: "Instagram", link: "https://www.instagram.com/iysaksystem_elisabethmalle/"}
 # - {icon: "Link", link: "https://linktr.ee/iysaksystem"}
 - {icon: "Facebook", link: "https://www.facebook.com/profile.php?id=61579621666964"}
