--- a/site/_data/footer.yml
+++ b/site/_data/footer.yml
@@ -8,4 +8,4 @@ footer_menu__settings:
       url: '/imprint'
 
 copyright_text_html: >-
-  <p> 2022 &copy; CloudCannon</p><p>Erstellt von <a href=https://felixholz.com>Felix Holz</a></p>
+  <p> 2025 &copy; Trandwax s.r.o.</p> <p> 2022 &copy; CloudCannon</p><p>Entwicklung: <a href=https://felixholz.com>Felix Holz</a></p>
