--- a/site/_data/general_settings.yml
+++ b/site/_data/general_settings.yml
@@ -1,5 +1,5 @@
-title: WorkWithLizz
-description: WorkWithLizz - Elisabeth Malle
-social_media_share_image: /images/lizz_profil.jpg
+title: Elisabeth Malle
+description: Elisabeth Malle - bekannt aus „Goodbye Deutschland“. Goodbye Old World. Hello New Life.
+social_media_share_image: /images/lizz_profil2.png
 disqus-identifier:
 google-analytics:
