--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,69 +1,69 @@
-# .github/workflows/deploy.yml
+# # .github/workflows/deploy.yml
 
-name: Deploy Jekyll site to GitHub Pages
+# name: Deploy Jekyll site to GitHub Pages
 
-on:
-  push:
-    branches: ["main"]
-  workflow_dispatch:
+# on:
+#   push:
+#     branches: ["main"]
+#   workflow_dispatch:
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+# permissions:
+#   contents: read
+#   pages: write
+#   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+# concurrency:
+#   group: "pages"
+#   cancel-in-progress: false
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v4
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout 🛎️
+#         uses: actions/checkout@v4
       
-      - name: Setup Node.js ⚙️
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: 'npm'
+#       - name: Setup Node.js ⚙️
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: "20"
+#           cache: 'npm'
 
-      - name: Install JS dependencies 📦
-        run: npm install
+#       - name: Install JS dependencies 📦
+#         run: npm install
 
-      - name: Setup Ruby 💎
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1' 
-          bundler-cache: true
-          # Tell Bundler where to find the Gemfile
-          working-directory: ./site
+#       - name: Setup Ruby 💎
+#         uses: ruby/setup-ruby@v1
+#         with:
+#           ruby-version: '3.1' 
+#           bundler-cache: true
+#           # Tell Bundler where to find the Gemfile
+#           working-directory: ./site
 
-      - name: Setup Pages 📄
-        id: pages
-        uses: actions/configure-pages@v5
+#       - name: Setup Pages 📄
+#         id: pages
+#         uses: actions/configure-pages@v5
 
-      - name: Build with Jekyll 🔨
-        # Run the build command from within the /site directory
-        working-directory: ./site
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
-        env:
-          JEKYLL_ENV: production
+#       - name: Build with Jekyll 🔨
+#         # Run the build command from within the /site directory
+#         working-directory: ./site
+#         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+#         env:
+#           JEKYLL_ENV: production
 
-      - name: Upload artifact ⬆️
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Update the path to the generated site
-          path: './site/_site'
+#       - name: Upload artifact ⬆️
+#         uses: actions/upload-pages-artifact@v3
+#         with:
+#           # Update the path to the generated site
+#           path: './site/_site'
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages 🚀
-        id: deployment
-        uses: actions/deploy-pages@v4
+#   deploy:
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.deployment.outputs.page_url }}
+#     runs-on: ubuntu-latest
+#     needs: build
+#     steps:
+#       - name: Deploy to GitHub Pages 🚀
+#         id: deployment
+#         uses: actions/deploy-pages@v4
